--- a/index.html
+++ b/index.html
@@ -3,8 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    {% include "csses/main_css2.html" %}
-    <title>С днём рождения, бабушка!</title>
+    <style>
+    body {
+        background-color: #ccdce8; /* Устанавливаем цвет заднего фона */
+        margin: 0 auto;
+        color: #011d30;
+        font-family: Arial Narrow; /* Шрифт текста */
+        max-width: 100%;
+    }
+
+    .beige-bar {
+        background-color: #011d30; /* Цвет полосы */
+        height: 40px; /* Высота полосы */
+        width: 100%; /* Ширина полосы (по всей ширине экрана) */
+    }
+
+    .filler {
+        height: 15px;
+        width: 100%;
+    }
+
+    .main-text {
+        margin: 2%;
+        font-size: 55px;
+    }
+
+    .pbasic {
+        padding: 2%;
+    }
+
+    .padvanced {
+        background-color: #ed8c99;
+        border-radius: 3%;
+        padding-top: 2%;
+        padding-bottom: 4%;
+        padding-left: 4%;
+        padding-right: 4%;
+        text-align: right;
+    }
+
+    .comment {
+        background-color: #d1d1d1;
+        padding: 2%;
+        border: 3px solid #adadad;
+        font-size: 36px;
+        font-style: italic;
+        text-align: left;
+    }
+
+    .comment-narrow {
+        background-color: #d1d1d1;
+        padding: 2%;
+        border: 3px solid #adadad;
+        font-size: 36px;
+        font-style: italic;
+        text-align: center;
+        width: 75%
+    }
+
+    .center-text{
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 75px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    video {
+        margin-top: 15px;
+    }
+
+    table{
+        background-color: #adadad;
+        border: 10px solid #858585;
+        padding: 2%;
+    }
+
+</style>
+<title>С днём рождения, бабушка!</title>
 </head>
 <body>
     <img src="static/head1.jpg" alt="Тут должна была быть красота" width="100%">
