--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             </div>
         </div>
         <div class="filler"></div>
+        <div class="comment">А те, кто скажут, что тут много опечаток, пусть сами поробую напичетать такой объём текста без автозамены, не забывая попути програмировать сайт, продумывать дизайн и обрабатывать поступающие из различных источников медиа файлы, в условии, когла сроки поджимают капитально</div>
         <div class="filler"></div>
         <div class="filler"></div>
     </div>
