--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <!-- Животинки -->
         <div class="pbasic">
             <h1>Животинки</h1>
-            Много (два - уже много) милых животных доказывают, что они милые и не только милые (особенно чища хочет показать, что он в первую очередь наглый, как Ваня)
+            Много (два - уже много) милых животных доказывают, что они милые и не только милые (особенно Чиша хочет показать, что он в первую очередь наглый, как Ваня)
             <div align="center">
                 <div class="filler"></div>
                 <table width="90%" align="center" >
@@ -191,7 +191,7 @@
         </div>
         <!-- Всё -->
         <div class="padvanced">
-            <h1 align="center">Вот что бывает с теме, кто проворонивают дедлайны</h1>
+            <h1 align="center">Вот что бывает с теми, кто проворонивают дедлайны</h1>
             <div class="center-text">Их добавляют в конец!!! *злобный смех*</div>
             <div align="center">
                 <video controls width="100%">
@@ -211,7 +211,7 @@
             </div>
         </div>
         <div class="filler"></div>
-        <div class="comment">А те, кто скажут, что тут много опечаток, пусть сами поробую напичетать такой объём текста без автозамены, не забывая попути програмировать сайт, продумывать дизайн и обрабатывать поступающие из различных источников медиа файлы, в условии, когла сроки поджимают капитально</div>
+        <div class="comment">А те, кто скажут, что тут много опечаток, пусть сами поробую напичетать такой объём текста без автозамены, не забывая попути програмировать сайт, продумывать дизайн, писать текста и обрабатывать поступающие из различных источников медиа файлы, в условии, когла сроки поджимают капитально</div>
         <div class="filler"></div>
         <div class="filler"></div>
         <div class="filler"></div>
