--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </video>
             </div>
         </div>
-        <div class="comment"><p onclick="showPopup()" align="center">Нажмите, если считаете, что на сайте неоправдано много опечаток</p></div>
+        <div class="comment"><p onclick="showPopup()" align="center"><strong>Нажмите</strong>, если считаете, что на сайте неоправдано много опечаток</p></div>
 
 <!-- Всплывающее окно -->
         <div id="popup" class="popup" onclick="hidePopup()">
